Used controller instead of RESTful API to extract instances for easier management and faster performance